--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,23 @@ chrono = "0.4"
 dirs = "5.0"
 regex = "1"
 
+# Audio recording
+cpal = "0.15"
+hound = "3.5"
+
+# Whisper transcription
+whisper-rs = "0.12"
+
+# Audio format conversion
+symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
+
+# Async & utilities
+tokio = { version = "1", features = ["sync"] }
+once_cell = "1.19"
+reqwest = { version = "0.11", features = ["stream"] }
+futures-util = "0.3"
+
+# Tauri plugins
+tauri-plugin-dialog = "2"
+tauri-plugin-global-shortcut = "2"
+
